# logistics-integration-platform

./: .funcignore  .gitattributes  .gitignore  function_app.py  host.json  pyproject.toml  pyrightconfig.json  query_acu_api.py  readme.md  requirements.txt  run.py  run_get_from_RMI.py  run_send_to_RMI.py  simple.py
.tests/: query_acu_api.py  run_get_from_RMI.py  run_send_to_RMI.py
config/: settings.py
connectors/: __init__.py  acu_api.py  acu_odata.py  aftership.py  avs.py  criteo_api.py  hubspot_api.py  kustomer.py  odata.py  redstag_api.py  rmi_api.py  rmi_xml.py  sharepoint.py  shopify.py  sql.py  teams.py  transunion.py
dags/: create_acu_receipts.py  get_from_rmi.py  send_to_rmi.py
docs/: acu_deletions.md  address_validator.md  confirm_open_shipments.md  get_status_from_rmi.md  kustomer.md  pack_shipments.md  redstag_send_shipments.md
load/: address_validator.py  kustomer.py  load_redstag_send.py  shipment_api.py
pipelines/: __init__.py  acu_deletions.py  acu_to_dbc_phone_revenue.py  acu_to_dbc_quotes.py  acu_to_dbc_sales_orders.py  address_validator.py  aftership_retrieval.py  aftership_send.py  aftership_to_dbc.py  aftership_update.py  audit_fulfillment.py  base.py  confirm_open_shipments.py  create_acu_receipt.py  criteo.py  get_closed_shipments.py  get_closed_shipments_from_RMI.py  get_receipts.py  get_receipts_from_RMI.py  get_rmas_from_RMI.py  get_status_from_RMI.py  hubspot_properties.py  hubspot_send_order_data.py  hubspot_snapshot.py  kustomer.py  notify_fulfillment_ops.py  order_deletions.py  pack_shipment.py  pack_shipments.py  rmi_format.py  (+11 more)
(+169 files in other folders)
